src/test/ui/async-await/try-on-option-in-async.stderr
error[E0277]: the `?` operator can only be used in an async block that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/try-on-option-in-async.rs:8:9
   |
LL |         x?;
   |         ^^ cannot use the `?` operator in an async block that returns `{integer}`
   |
   = help: the trait `std::ops::Try` is not implemented for `{integer}`
   = note: required by `std::ops::Try::from_error`

error[E0277]: the `?` operator can only be used in an async closure that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/try-on-option-in-async.rs:16:9
   |
LL |         x?;
   |         ^^ cannot use the `?` operator in an async closure that returns `u32`
   |
   = help: the trait `std::ops::Try` is not implemented for `u32`
   = note: required by `std::ops::Try::from_error`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `std::ops::Try`)
  --> $DIR/try-on-option-in-async.rs:25:5
   |
LL |     x?;
   |     ^^ cannot use the `?` operator in an async function that returns `u32`
   |
   = help: the trait `std::ops::Try` is not implemented for `u32`
   = note: required by `std::ops::Try::from_error`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
